--- a/package.json
+++ b/package.json
@@ -1,32 +1,87 @@
 {
-  "name": "@kapeta/sdk-nosql-mongodb",
-  "version": "0.0.17",
-  "description": "",
-  "main": "index.js",
-  "private": false,
-  "publishConfig": {
-    "access": "public"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kapetacom/sdk-nodejs-nosql-mongodb.git"
-  },
-  "keywords": [
-    "kapeta"
-  ],
-  "author": "Henrik Hofmeister <hh@kapeta.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/kapetacom/sdk-nodejs-nosql-mongodb/issues"
-  },
-  "homepage": "https://github.com/kapetacom/sdk-nodejs-nosql-mongodb#readme",
-  "dependencies": {
-    "mongodb": "3.2.7"
-  },
-  "peerDependencies": {
-    "@kapeta/sdk-config": "<2"
-  },
-  "devDependencies": {
-    "@kapeta/sdk-config": "<2"
-  }
+    "name": "@kapeta/sdk-nosql-mongodb",
+    "version": "0.0.17",
+    "description": "MongoDB NoSQL SDK for Kapeta",
+    "type": "module",
+    "exports": {
+        ".": {
+            "import": {
+                "types": "./dist/esm/index.d.ts",
+                "default": "./dist/esm/index.js"
+            },
+            "require": {
+                "types": "./dist/cjs/index.d.cts",
+                "default": "./dist/cjs/index.js"
+            }
+        }
+    },
+    "types": "./dist/esm/index.d.ts",
+    "main": "./dist/cjs/index.js",
+    "private": false,
+    "publishConfig": {
+        "access": "public"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/kapetacom/sdk-nodejs-nosql-mongodb.git"
+    },
+    "keywords": [
+        "kapeta"
+    ],
+    "author": "Henrik Hofmeister <hh@kapeta.com>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/kapetacom/sdk-nodejs-nosql-mongodb/issues"
+    },
+    "scripts": {
+        "clean": "rm -rf ./dist",
+        "build:esm": "tsc --module esnext --outDir ./dist/esm",
+        "build:cjs": "tsc --module commonjs --outDir ./dist/cjs",
+        "build": "npm run clean && npm run build:esm && npm run build:cjs",
+        "format": "prettier --write .",
+        "lint": "tsc --noEmit && eslint src/**/*.ts",
+        "prepublishOnly": "npm run build"
+    },
+    "homepage": "https://github.com/kapetacom/sdk-nodejs-nosql-mongodb#readme",
+    "prettier": "@kapeta/prettier-config",
+    "release": {
+        "plugins": [
+            "@semantic-release/commit-analyzer",
+            "@semantic-release/release-notes-generator",
+            [
+                "@semantic-release/changelog",
+                {
+                    "changelogFile": "CHANGELOG.md"
+                }
+            ],
+            "@semantic-release/npm",
+            "@semantic-release/github",
+            [
+                "@semantic-release/git",
+                {
+                    "assets": [
+                        "CHANGELOG.md",
+                        "package.json",
+                        "package-lock.json"
+                    ],
+                    "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+                }
+            ]
+        ]
+    },
+    "dependencies": {
+        "mongodb": "5.6.0"
+    },
+    "peerDependencies": {
+        "@kapeta/sdk-config": "<2"
+    },
+    "devDependencies": {
+        "@kapeta/sdk-config": "<2",
+        "@types/mongodb": "4.0.7",
+        "@kapeta/eslint-config": "^0.6.0",
+        "@kapeta/prettier-config": "^0.6.0",
+        "eslint": "^8.42.0",
+        "eslint-config-prettier": "^8.8.0",
+        "prettier": "^2.8.8"
+    }
 }
