--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "bugs": {
         "url": "https://github.com/kapetacom/sdk-nodejs-nosql-mongodb/issues"
     },
+    "bin": {
+        "kap-mongodb-url": "./bin/database-url"
+    },
     "scripts": {
         "clean": "rm -rf ./dist",
         "build:esm": "tsc --module esnext --outDir ./dist/esm && echo '{\"type\":\"module\"}' > ./dist/esm/package.json",
@@ -70,16 +73,17 @@
         ]
     },
     "dependencies": {
-        "mongodb": "5.6.0"
+        "@prisma/client": "^4.15.0",
+        "prisma": "^4.15.0"
     },
     "peerDependencies": {
         "@kapeta/sdk-config": "<2"
     },
     "devDependencies": {
-        "@kapeta/sdk-config": "<2",
-        "@types/mongodb": "4.0.7",
         "@kapeta/eslint-config": "^0.6.0",
         "@kapeta/prettier-config": "^0.6.0",
+        "@kapeta/sdk-config": "<2",
+        "@types/node": "^20.3.0",
         "eslint": "^8.42.0",
         "eslint-config-prettier": "^8.8.0",
         "prettier": "^2.8.8"
