--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@kapeta/sdk-nosql-mongodb",
     "version": "1.1.0",
     "description": "MongoDB NoSQL SDK for Kapeta",
-    "type": "module",
+    "type": "commonjs",
     "exports": {
         ".": {
             "import": {
